# tim

./: Cargo.toml  README.md  flake.nix
src/: cfg.rs  imap_client.rs  main.rs  structs.rs
src/ui/: gui_list.rs  mod.rs  read_view.rs
